--- a/image/env.yaml
+++ b/image/env.yaml
@@ -16,3 +16,6 @@ BACKUP_MANAGER_UPLOAD_HOSTS: ftp.example.org
 BACKUP_MANAGER_UPLOAD_FTP_USER: ftp-user
 BACKUP_MANAGER_UPLOAD_FTP_PASSWORD: ftp-password
 BACKUP_MANAGER_UPLOAD_TTL: 60 # Delete backups on the ftp that are over 60 days
+
+# Encryption, disabled if empty
+BACKUP_MANAGER_ENCRYPTION_RECIPIENT:
