--- a/image/service/backup-manager/assets/backup-manager.conf
+++ b/image/service/backup-manager/assets/backup-manager.conf
@@ -101,6 +101,7 @@ export BM_ARCHIVE_METHOD="tarball"
 # export BM_ENCRYPTION_RECIPIENT="Alexis Sukrieh"
 # export BM_ENCRYPTION_RECIPIENT="sukria@sukria.net"
 
+# export BM_ENCRYPTION_RECIPIENT="{{ BACKUP_MANAGER_ENCRYPTION_RECIPIENT }}"
 
 ##############################################################
 # Section "TARBALL"
