--- a/image/env.yaml
+++ b/image/env.yaml
@@ -18,4 +18,5 @@ BACKUP_MANAGER_UPLOAD_FTP_PASSWORD: ftp-password
 BACKUP_MANAGER_UPLOAD_TTL: 60 # Delete backups on the ftp that are over 60 days
 
 # Encryption, disabled if empty
-BACKUP_MANAGER_ENCRYPTION_RECIPIENT:
+BACKUP_MANAGER_ENCRYPTION: false
+BACKUP_MANAGER_ENCRYPTION_RECIPIENT: Mike Ross
