--- a/image/service/backup-manager/assets/backup-manager.conf
+++ b/image/service/backup-manager/assets/backup-manager.conf
@@ -13,7 +13,7 @@
 #############################################################
 
 # Where to store the archives
-export BM_REPOSITORY_ROOT="{{ BACKUP_MANAGER_REPOSITORY }}"
+export BM_REPOSITORY_ROOT="/data/backup"
 
 # Where to place temporary files
 export BM_TEMP_DIR="/tmp"
