--- a/image/service/backup-manager/assets/backup-manager.conf
+++ b/image/service/backup-manager/assets/backup-manager.conf
@@ -342,7 +342,7 @@ export BM_UPLOAD_METHOD="{{ BACKUP_MANAGER_UPLOAD_METHOD }}"
 export BM_UPLOAD_HOSTS="{{ BACKUP_MANAGER_UPLOAD_HOSTS }}"
 
 # Where to put archives on the remote hosts (global)
-export BM_UPLOAD_DESTINATION=""
+export BM_UPLOAD_DESTINATION="{{ BACKUP_MANAGER_UPLOAD_DESTINATION }}"
 
 # Uncomment the 'export ...' line below to activate the uploaded archives
 # database.
