--- a/image/service/backup-manager/assets/backup-manager.conf
+++ b/image/service/backup-manager/assets/backup-manager.conf
@@ -542,7 +542,7 @@ export BM_LOGGER="true"
 export BM_LOGGER_LEVEL="warning"
 
 # You can choose which facility to use
-export BM_LOGGER_FACILITY=""
+export BM_LOGGER_FACILITY="user"
 
 # Enter here some shell script.
 # It will be executed before the first action of backup-manager.
