--- a/image/service/backup-manager/assets/backup-manager.conf
+++ b/image/service/backup-manager/assets/backup-manager.conf
@@ -42,11 +42,6 @@ export BM_ARCHIVE_CHMOD="660"
 # Number of days we have to keep an archive (Time To Live)
 export BM_ARCHIVE_TTL="{{ BACKUP_MANAGER_TTL }}"
 
-# At which frequency will you build your archives?
-# You can choose either "daily" or "hourly".
-# This should match your CRON configuration.
-export BM_ARCHIVE_FREQUENCY="daily"
-
 # Do you want to purge only the top-level directory or all
 # directories under BM_REPOSITORY_ROOT?
 export BM_REPOSITORY_RECURSIVEPURGE="false"
@@ -78,7 +73,7 @@ export BM_ARCHIVE_NICE_LEVEL="10"
 # - none
 # If you don't want to use any backup method (you don't want to
 # build archives) then choose "none"
-export BM_ARCHIVE_METHOD="tarball"
+export BM_ARCHIVE_METHOD="{{ BACKUP_MANAGER_ARCHIVE_METHOD }}"
 
 ##############################################################
 # Encryption - because you cannot trust the place your
@@ -93,6 +88,7 @@ export BM_ARCHIVE_METHOD="tarball"
 # tar, tar.gz, tar.bz2
 
 # Uncomment the following line if you want to enable encryption
+# available method: gpg
 # export BM_ENCRYPTION_METHOD="gpg"
 
 # The encryption will be made using a GPG ID
@@ -143,21 +139,20 @@ export BM_TARBALL_DUMPSYMLINKS="false"
 
 # It's recommanded to use BM_TARBALL_TARGETS[] though.
 # Warning! You *must not* use both variables at the same time.
+# NOTE: The Debian package will only update BM_TARBALL_DIRECTORIES
 
 # Paths without spaces in their name:
 export BM_TARBALL_DIRECTORIES="{{ BACKUP_MANAGER_TARBALL_DIRECTORIES }}"
 
 # If one or more of the targets contain a space, use the array:
 # declare -a BM_TARBALL_TARGETS
-
 # BM_TARBALL_TARGETS[0]="/etc"
 # BM_TARBALL_TARGETS[1]="/boot"
-
 # export BM_TARBALL_TARGETS
 
 # Files to exclude when generating tarballs, you can put absolute
 # or relative paths, Bash wildcards are possible.
-export BM_TARBALL_BLACKLIST="/dev /sys /proc /tmp"
+export BM_TARBALL_BLACKLIST=""
 
 # With the "dar" filetype, you can choose a maximum slice limit.
 export BM_TARBALL_SLICESIZE="1000M"
@@ -174,11 +169,11 @@ export BM_TARBALL_EXTRA_OPTIONS=""
 
 # Which frequency to use for the master tarball?
 # possible values: weekly, monthly
-export BM_TARBALLINC_MASTERDATETYPE="weekly"
+export BM_TARBALLINC_MASTERDATETYPE="{{ BACKUP_MANAGER_TARBALLINC_MASTERDATETYPE }}"
 
 # Number of the day, in the BM_TARBALLINC_MASTERDATETYPE frequency
 # when master tarballs should be made
-export BM_TARBALLINC_MASTERDATEVALUE="1"
+export BM_TARBALLINC_MASTERDATEVALUE="{{ BACKUP_MANAGER_TARBALLINC_MASTERDATEVALUE }}"
 
 # Examples: you want to make master tarballs every friday:
 # BM_TARBALLINC_MASTERDATETYPE="weekly"
@@ -363,7 +358,7 @@ export BM_UPLOAD_DESTINATION="{{ BACKUP_MANAGER_UPLOAD_DESTINATION }}"
 #############################################################
 
 # the user to use for the SSH connections/transfers
-export BM_UPLOAD_SSH_USER=""
+export BM_UPLOAD_SSH_USER="bmngr"
 
 # The private key to use for opening the connection
 export BM_UPLOAD_SSH_KEY=""
@@ -409,6 +404,11 @@ export BM_UPLOAD_FTP_SECURE="false"
 # Do you want to use FTP passive mode?
 # This is mandatory for NATed/firewalled environments
 export BM_UPLOAD_FTP_PASSIVE="true"
+
+# Timeout (in seconds) for FTP transfer
+# This setting only has effect when using FTP transfer with
+# secure mode disabled (BM_UPLOAD_FTP_SECURE to "false")
+export BM_UPLOAD_FTP_TIMEOUT="120"
 
 # Test the FTP connection before starting archives upload.
 # This will enable BM to try sending a 2MB test file before
@@ -479,6 +479,21 @@ export BM_UPLOAD_RSYNC_HOSTS=""
 # Do you want to dereference the files pointed by symlinks?
 # enter true or false (true can lead to huge archives, be careful).
 export BM_UPLOAD_RSYNC_DUMPSYMLINKS="false"
+
+# Files/folders to exclude when rsyncing. Warning: rsync will interpret
+# it as a mask, so will exclude any file/folder corresponding to it
+export BM_UPLOAD_RSYNC_BLACKLIST=""
+
+# Extra options to append to rsync
+# (take care to what you do; this will be silently added to the
+# command line.)
+export BM_UPLOAD_RSYNC_EXTRA_OPTIONS=""
+
+# Do you want to limit the maximum available bandwidth rsync
+# can use ?
+# By default, no bandwidth limit is applied.
+# Example: 32M, 1024K, ...
+export BM_UPLOAD_RSYNC_BANDWIDTH_LIMIT=""
 
 ##############################################################
 # Section "BURNING"
