--- a/image/service/backup-manager/assets/backup-manager.conf
+++ b/image/service/backup-manager/assets/backup-manager.conf
@@ -293,6 +293,7 @@ declare -a BM_PIPE_COMPRESS
 # will change as expected (eg, .gz if "gzip").
 #
 # Here are a couple of examples for using this method:
+# BACKUP MANAGER COMMAND PIPE DATA
 
 # Archive a remote MySQL database through SSH:
 #    BM_PIPE_COMMAND[0]="ssh host -c \"mysqldump -ufoo -pbar base\""
