--- a/image/service/backup-manager/assets/backup-manager.conf
+++ b/image/service/backup-manager/assets/backup-manager.conf
@@ -555,7 +555,7 @@ export BM_LOGGER="true"
 
 # Which level of messages do you want to log to syslog?
 # possible values are : debug,info,warning,error
-export BM_LOGGER_LEVEL="warning"
+export BM_LOGGER_LEVEL="{{ BACKUP_MANAGER_LOGGER_LEVEL }}"
 
 # You can choose which facility to use
 export BM_LOGGER_FACILITY="user"
